# braynscircuitstudiobackend

./: pyproject.toml
bcsb/: settings.py
src/_old_/: index.tsx
src/_old_/config/: config.ts
src/_old_/manager/backend/: backend-manager.ts
src/_old_/service/auth/: auth-service.ts
src/_old_/service/nexus/: nexus.ts
src/_old_/user-input/path/file-browser/: file-browser-view.tsx  handlers.ts  hooks.ts
src/_old_/view/about/: about-view.tsx
src/_old_/view/page/main/side-panel/hooks/: load-model-handler.ts
src/app/: auth-token-widget.tsx  page.tsx
src/app/movies/simul/_/SimulViewer/: hooks.ts
src/service/login/auth/: auth-service.ts
src/service/service/: url.ts
src/service/service/backend/: file-system.ts
src/state/: state.ts
src/util/: fetch.ts  index.ts
