[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bcsb"
dynamic = ["version"]
description = "Brayns Circuit Studio Backend"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
keywords = ["BlueBrain", "Brayns", "Brayns Circuit Studio", "Backend"]
authors = [{ "name" = "Blue Brain Project, EPFL" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
]
dependencies = [
    "websockets",
 "psutil",
 "libsonata",
 "pillow>=12.0.0",
]

[project.optional-dependencies]
dev = ["mypy", "pytest", "ruff"]

[project.urls]
"Homepage" = "https://bbpgitlab.epfl.ch/viz/brayns/braynscircuitstudiobackend"
"Bug Tracker" = "https://bbpteam.epfl.ch/project/issues/projects/BCSB/issues"

[project.scripts]
bcsb = "bcsb:run"

[tool.setuptools.packages.find]
include = ["bcsb*"]

[tool.setuptools.dynamic]
version = { attr = "bcsb.version.VERSION" }

[tool.mypy]
disable_error_code = "import-untyped"

[tool.ruff]
lint.ignore = ["E501"]
line-length = 119
